--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <!-- Custom styles for this template -->
     <link href="css/new-age.min.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="css/custom.css">
+
+    <!-- Add favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+
   </head>
 
   <body id="page-top">
@@ -33,7 +38,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Humble</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/Asset 3.svg"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -59,6 +64,7 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
+              <img src="img/Asset 7.svg" alt="" class="humble_main_logo">
               <h1 class="mb-5">You’re awesome!</h1>
               <h1 class="mb-5">Swipe your dream job</h1>
               <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
