--- a/index.html
+++ b/index.html
@@ -56,9 +56,6 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Download</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#features">Features</a>
             </li>
             <li class="nav-item">
@@ -75,7 +72,7 @@
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
               <img src="img/Asset 7.svg" alt="" class="humble_main_logo">
-              <h1 class="mb-5">You’re awesome!</h1>
+              <h1 class="mb-5">Engineers: You’re awesome!</h1>
               <h1 class="mb-5">Swipe your dream job</h1>
               <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
             </div>
@@ -103,11 +100,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto">
-            <h2 class="section-heading">humble's AI matches you to dream jobs</h2>
-            <p>Connect to your Github account to see matches in minutes. Hundreds of tech jobs in your area (and further afield) are waiting for you to swipe!</p>
+            <h2 class="section-heading">humble's AI matches you to dream tech jobs</h2>
+            <p>Connect your Github account to see matches in minutes. Hundreds of tech jobs in your area (and further afield) are waiting for you to swipe!</p>
             <div class="badges">
-              <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-              <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+              <a class="badge-link" href="#"><img src="img/gh-badge.svg" alt=""></a>
             </div>
           </div>
         </div>
@@ -160,7 +156,7 @@
                   <div class="feature-item">
                     <i class="icon-present text-primary"></i>
                     <h3>Free for engineers</h3>
-                    <p class="text-muted">Free for engineers to view as many jobs as they like.</p>
+                    <p class="text-muted">Free to view as many jobs as you like.</p>
                   </div>
                 </div>
                 <div class="col-lg-6">
