update urls on the home page

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <img src="img/Asset 7.svg" alt="" class="humble_main_logo">
               <h1 class="mb-5">Engineers: You’re awesome!</h1>
               <h1 class="mb-5">Swipe your dream job</h1>
-              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
+              <a href="https://app.humbleapp.io" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
@@ -103,7 +103,7 @@
             <h2 class="section-heading">humble's AI matches you to dream tech jobs</h2>
             <p>Connect your Github account to see matches in minutes. Hundreds of tech jobs in your area (and further afield) are waiting for you to swipe!</p>
             <div class="badges">
-              <a class="badge-link" href="#"><img src="img/gh-badge.svg" alt=""></a>
+              <a class="badge-link" href="https://api.humbleapp.io/auth/github"><img src="img/gh-badge.svg" alt=""></a>
             </div>
           </div>
         </div>
@@ -177,7 +177,7 @@
       <div class="cta-content">
         <div class="container">
           <h2>Stop waiting.<br>Start swiping..</h2>
-          <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
+          <a href="https://app.humbleapp.io" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
         </div>
       </div>
       <div class="overlay"></div>
@@ -190,18 +190,8 @@
           new friends!</h2>
         <ul class="list-inline list-social">
           <li class="list-inline-item social-twitter">
-            <a href="#">
+            <a href="https://twitter.com/humbleapp">
               <i class="fa fa-twitter"></i>
-            </a>
-          </li>
-          <li class="list-inline-item social-facebook">
-            <a href="#">
-              <i class="fa fa-facebook"></i>
-            </a>
-          </li>
-          <li class="list-inline-item social-google-plus">
-            <a href="#">
-              <i class="fa fa-google-plus"></i>
             </a>
           </li>
         </ul>
