--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           new friends!</h2>
         <ul class="list-inline list-social">
           <li class="list-inline-item social-twitter">
-            <a href="https://twitter.com/humbleapp">
+            <a href="https://twitter.com/humbleappio">
               <i class="fa fa-twitter"></i>
             </a>
           </li>
