--- a/index.html
+++ b/index.html
@@ -225,6 +225,9 @@
     <!-- Custom scripts for this template -->
     <script src="js/new-age.min.js"></script>
 
+    <!-- Hello bar -->
+    <script src="https://my.hellobar.com/6256018d10a35ece23e2d62319710a6cc51c797f.js" type="text/javascript" charset="utf-8" async="async"></script>
+
   </body>
 
 </html>
