--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
               <img src="img/Asset 7.svg" alt="" class="humble_main_logo">
+              <p style="margin-top:-40px;"><b><i>currently in alpha</i></b></p>
               <h1 class="mb-5">Engineers: You’re awesome!</h1>
               <h1 class="mb-5">Swipe your dream job</h1>
               <a href="https://app.humbleapp.io" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
@@ -190,7 +191,7 @@
           new friends!</h2>
         <ul class="list-inline list-social">
           <li class="list-inline-item social-twitter">
-            <a href="https://twitter.com/humbleappio">
+            <a href="https://twitter.com/humbleappio" target="_blank">
               <i class="fa fa-twitter"></i>
             </a>
           </li>
@@ -203,13 +204,13 @@
         <p>&copy; 2017 humble. All Rights Reserved.</p>
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a href="#">Privacy</a>
+            <a href="privacy.html">Privacy</a>
           </li>
           <li class="list-inline-item">
-            <a href="#">Terms</a>
+            <a href="terms.html">Terms</a>
           </li>
           <li class="list-inline-item">
-            <a href="#">FAQ</a>
+            <a href="mailto:hello@humbleapp.io">Contact</a>
           </li>
         </ul>
       </div>
