Add facebook to social

--- a/index.html
+++ b/index.html
@@ -194,7 +194,12 @@
             <a href="https://twitter.com/humbleappio" target="_blank">
               <i class="fa fa-twitter"></i>
             </a>
-          </li>
+            </li>
+            <li class="list-inline-item social-facebook">
+              <a href="https://www.facebook.com/humbleapp/" target="_blank">
+                <i class="fa fa-facebook"></i>
+              </a>
+            </li>
         </ul>
       </div>
     </section>
