--- a/index.html
+++ b/index.html
@@ -200,6 +200,11 @@
                 <i class="fa fa-facebook"></i>
               </a>
             </li>
+            <li class="list-inline-item social-instagram">
+              <a href="https://www.instagram.com/humbleappio/" target="_blank">
+                <i class="fa fa-instagram"></i>
+              </a>
+            </li>
         </ul>
       </div>
     </section>
