--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
               <img src="img/Asset 7.svg" alt="" class="humble_main_logo">
-              <p style="margin-top:-40px;"><b><i>currently in alpha</i></b></p>
-              <h1 class="mb-5">Engineers: You’re awesome!</h1>
+              <p><b>Currently in Alpha, stay tuned!</b></p>
+              <img src="img/tc.png" alt="">
+              <br>
+              <br>
+              <!-- <h1 class="mb-5">Engineers: You’re awesome!</h1> -->
               <h1 class="mb-5">Swipe your dream job</h1>
               <a href="https://app.humbleapp.io" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
             </div>
@@ -92,6 +95,7 @@
                 </div>
               </div>
             </div>
+
           </div>
         </div>
       </div>
